<resources>
    <string name="app_name">SNview</string>
    <string name="sample_content">Sample of dragging the content.\nThe menu consists of a ListView, for which the
        active position is saved through configuration changes.\nAdditionally, if the menu is open, a back press will
        close it.</string>
    <string name="sample_window">Sample of dragging the entire window.\nThe menu is a simple ScrollView, with a click
        listener set on each item.\nThe drawer will animate slightly open, to make it more discoverable.\nAdditionally,
        if the menu is open, a back press will close it.</string>
    <string name="common_drawer_top">SNview  </string>
    <string name="common_drawer_sys_setting">系统配置</string>
    <string name="common_drawer_remote_playback">远程回放</string>
    <string name="common_obtain_device_wrong">获取设备失败</string>
    <string name="common_drawer_realtime_preview">实时预览</string>
    <string name="common_drawer_alarm_management">报警管理</string>
    <string name="common_drawer_device_management">设备管理</string>
    <string name="common_drawer_picture_management">图像管理</string>
    <string name="common_connection_wrong_check_port_domain">连接失败，请检查域名和端口设置</string>
    <string name="common_request_outtime_check_port_server">设备列表请求超时，请检查端口和服务器</string>
    <string name="common_last_devicelist_path">/data/data/com.starnet.snview/LastDevicesList.xml</string>
    <string name="global_exception_prompt">程序出现异常，即将退出</string>
    <string name="channel_load_timeout">账户数据加载超时</string>
    <string name="channel_load_exception">账户数据加载失败</string>
    <string name="channel_listview_device_layout_ok">确定</string>
    <string name="channel_listview_device_layout_cancel">取消</string>
    <string name="channel_manager_connect_timeout">连接验证超时</string>
    <string name="channel_manager_connect_wrong">连接验证错误，请检查信息</string>
    <string name="channel_manager_channellistview_search">请输入查找内容</string>
    <string name="channel_manager_channellistview_netnotopens">网络未开启</string>
    <string name="channel_manager_channellistview_netnotopen">网络未开启，请检查网络</string>
    <string name="channel_manager_channellistview_loadfail">用户设备数据尚未加载成功,请等待</string>
    <string name="channel_manager_channellistview_channelnotchoose">您暂时还没有做通道选择,请选择</string>
    <string name="navigation_title_sys_setting">系统设置</string>
    <string name="navigation_title_channel_list">通道列表</string>
    <string name="navigation_title_system_setting">系统配置</string>
    <string name="navigation_title_remote_playback">远程回放</string>
    <string name="navigation_title_system_setting_about">关于</string>
    <string name="navigation_title_realtime_preview">实时预览</string>
    <string name="navigation_title_device_management">设备管理</string>
    <string name="navigation_title_picture_management">图像管理</string>
    <string name="navigation_title_system_setting_network_setting">网络配置</string>
    <string name="navigation_title_system_setting_cloudaccount_setting">视频监控服务平台</string>
    <string name="nothing" />
    <string name="toolbar_sub_menu_focus">聚焦</string>
    <string name="toolbar_sub_dialog_set">设置</string>
    <string name="toolbar_sub_dialog_call">调用</string>
    <string name="toolbar_sub_dialog_hint">1~255</string>
    <string name="toolbar_sub_dialog_prompt">预置点应为1~255中的数字</string>
    <string name="toolbar_quality_menu_high">高清</string>
    <string name="toolbar_sub_menu_aperture">光圈</string>
    <string name="toolbar_quality_menu_fluency">流畅</string>
    <string name="toolbar_quality_menu_standard">标清</string>
    <string name="toolbar_quality_menu_custom">自定义</string>
    <string name="toolbar_sub_menu_focal_length">焦距</string>
    <string name="cloudaccount_listview_item_enable">启用</string>
    <string name="system_starplatform">视频监控服务平台</string>
    <string name="system_setting_help">帮助</string>
    <string name="system_setting_about">关于</string>
    <string name="system_setting_logout">退出</string>
    <string name="system_setting_logout_ok">确定</string>
    <string name="system_setting_update">软件更新</string>
    <string name="remind_sound_off">报警推送声音关闭</string>
    <string name="remind_shake_off">报警推送震动关闭</string>
    <string name="system_setting_alarmuser">报警账户</string>
    <string name="remind_shake_open">报警推送震动打开</string>
    <string name="system_setting_logout_cancel">取消</string>
    <string name="remind_sound_open">报警推送声音打开</string>
    <string name="system_setting_alarm_manager_add">增加</string>
    <string name="system_setting_newfunction">新功能介绍</string>
    <string name="system_setting_cloudaccount_port">端口</string>
    <string name="system_setting_newworksetting">视频监控服务平台</string>
    <string name="system_setting_alarm_manager_code">密码</string>
    <string name="system_setting_alarminfo_accept_off">关</string>
    <string name="system_setting_alarminfo_accept_open">开</string>
    <string name="system_setting_cloudaccountview_ok">确定</string>
    <string name="system_setting_alarm_manager_delete">删除</string>
    <string name="system_setting_alarm_manager_port">端口号</string>
    <string name="system_setting_alarm_manager_user">用户名</string>
    <string name="system_setting_alarm_manager_domain">域名</string>
    <string name="alarm_accept_off">关闭接收报警账户推送消息</string>
    <string name="alarm_accept_open">开启接收报警账户推送消息</string>
    <string name="system_setting_alarm_pushset">报警推送设置</string>
    <string name="system_setting_alarm_manager_preview">查看</string>
    <string name="system_setting_cloudaccount_password">密码</string>
    <string name="system_setting_cloudaccount_isenable_no">否</string>
    <string name="system_setting_alarm_manager_identify">验证</string>
    <string name="system_setting_cloudaccountview_cancel">取消</string>
    <string name="system_setting_cloudaccount_username">用户名</string>
    <string name="system_setting_cloudaccount_isenable_yes">是</string>
    <string name="system_setting_alarminfo_accept">报警推送接收</string>
    <string name="system_setting_alarmuser_accept">报警账户接收</string>
    <string name="system_setting_preview_user_info">报警账户信息</string>
    <string name="system_setting_alarminfo_remind_sound_off">关</string>
    <string name="system_setting_alarmuser_preview">报警账户管理</string>
    <string name="system_setting_alarminfo_account">报警推送账户</string>
    <string name="system_setting_cloudaccount_isenable">是否启用</string>
    <string name="system_setting_cloudaccount_server">域名服务器</string>
    <string name="system_setting_alarminfo_remind_sound_open">开</string>
    <string name="system_setting_pushset_alarmuser">报警推送账户</string>
    <string name="system_setting_alarm_pushset_user_del_ok">确认</string>
    <string name="system_setting_pushset_clear_alarm_suc">完成清除</string>
    <string name="system_setting_cloudaccount_nouseable">用户不可用</string>
    <string name="system_setting_cloudaccount_isenable_choice">启用</string>
    <string name="system_setting_alarm_account_manager">报警账户管理</string>
    <string name="system_setting_alarm_pushset_user_del_cancel">取消</string>
    <string name="system_setting_alarm_pushset_identify_suc">验证成功</string>
    <string name="system_setting_alarminfo_remind_shake">报警推送震动</string>
    <string name="system_setting_alarminfo_remind_sound">报警推送声音</string>
    <string name="system_setting_alarm_pushset_user_del">确认删除账户</string>
    <string name="system_setting_pushset_save_alarminfo">保存报警推送设置</string>
    <string name="system_setting_pushset_clear_alarminfo">清除报警信息</string>
    <string name="system_setting_pushset_clear_alarm_fai">请您稍后重试</string>
    <string name="system_setting_corp_rights_txt">All Rights Reserved</string>
    <string name="system_setting_alarm_manager_code_please">请输入密码</string>
    <string name="system_setting_cloudaccount_layout_serveName">服务器</string>
    <string name="system_setting_cloudaccount_useable">平台账户验证通过</string>
    <string name="system_setting_cloudaccount_adding_connect_succ">验证成功</string>
    <string name="system_setting_cloudaccount_adding_connect_fail">验证失败</string>
    <string name="system_setting_cloudaccount_adding_connect_timeout">验证超时</string>
    <string name="notify_accept_open">报警账户、视频监控服务平台账户接收推送消息</string>
    <string name="notify_accept_off">报警账户、视频监控服务平台账户不接收推送消息</string>
    <string name="system_setting_help_titile">帮助</string>
    <string name="system_setting_cloudaccountview_delete_user">删除账户</string>
    <string name="system_setting_alarm_pushset_input_domain">请输入域名</string>
    <string name="system_setting_alarm_pushset_input_port">请输入端口号</string>
    <string name="system_setting_cloudaccountupdate_edit_right">保存成功</string>
    <string name="system_setting_alarmuser_null">目前您还没有添加报警账户</string>
    <string name="system_setting_alarm_manager_user_please">请输入用户名</string>
    <string name="system_setting_alarm_manager_port_please">请输入端口号</string>
    <string name="system_setting_alarm_pushset_input_password">请输入密码</string>
    <string name="system_setting_alarm_pushset_domn_null">域名为空，请填充</string>
    <string name="system_setting_alarm_pushset_input_username">请输入用户名</string>
    <string name="system_setting_alarm_pushset_builer_identify_add_ok">确定</string>
    <string name="system_setting_alarm_pushset_port_null">端口号为空，请填充</string>
    <string name="system_setting_alarm_pushset_uName_null">用户名为空，请填充</string>
    <string name="system_setting_about_build">Version 6.2.12 (Build 20150727)</string>
    <string name="system_setting_alarm_pushset_builer_identify_add_cance">取消</string>
    <string name="system_setting_pushset_identify_wait">正在进行连接验证，请等待</string>
    <string name="system_setting_alarm_pushset_timout">验证超时，请检查网络后重试</string>
    <string name="system_setting_cloudaccount_ext32">用户名长度不能超过32位</string>
    <string name="system_setting_alarm_pushset_user_add_sucess">推送账户添加成功</string>
    <string name="system_setting_alarm_pushset_user_del_sucess">推送账户删除成功</string>
    <string name="system_setting_alarm_pushset_netnotopen">网络未打开，请打开后重试</string>
    <string name="system_setting_cloudaccount_identify_ok">用户启用前，请先进行验证</string>
    <string name="system_set_setedit_identify_user_right">正在验证账号有效性，请等待</string>
    <string name="system_set_setting_identify_user_right">正在验证账号有效性，请等待</string>
    <string name="system_setting_pushset_clear_allalarminfo_ok">确认清除所有报警信息?</string>
    <string name="system_setting_alarm_pushset_userchange_idn">用户信息有改动，请验证</string>
    <string name="system_setting_alarm_manager_domain_value">xy.star-netsecurity.com</string>
    <string name="system_setting_alarm_pushset_exist_cover">已经存在该用户，是否覆盖？</string>
    <string name="system_setting_alarm_pushset_builer_identify_del">请进行验证后再删除</string>
    <string name="system_setting_alarm_pushset_builer_identify_add">请进行验证后再增加</string>
    <string name="system_setting_pushset_saving">正在联网验证保存您的设置，请稍等&#8230;</string>
    <string name="system_setting_alarm_pushset_pswd_wrong">密码错误，请检查后再进行验证</string>
    <string name="system_setting_alarm_pushset_user_wrong">用户名错误，请检查后再进行验证</string>
    <string name="system_setting_loading_collect_device_data">正在加载设备数据，请等待</string>
    <string name="system_setting_refreshing_collect_device_data">正在刷新设备数据，请等待</string>
    <string name="system_setting_corp_content_txt_chi">福建星网锐捷安防科技有限公司  版权所有</string>
    <string name="system_setting_cloudaccountsetedit_null_content">包含有未填写的信息，请检查</string>
    <string name="system_setting_cloudaccountsetting_null_content">包含有未填写的信息，请检查</string>
    <string name="system_setting_alarm_pushset_domain_port_wrong">域名或者端口号错误，请检查后再进行验证</string>
    <string name="system_setting_corp_content_txt_eng">Copyright © 2010&#8211;2015 Star&#8211;netsecurity</string>
    <string name="device_manager">设备管理</string>
    <string name="device_manager_ip">设备IP</string>
    <string name="device_manager_choose">选择</string>
    <string name="device_manager_channel">通道</string>
    <string name="device_manager_name">设备名称</string>
    <string name="alarm_manageradapter_content">报警信息</string>
    <string name="alarm_manageradapter_imageload">图片下载</string>
    <string name="alarm_manageradapter_videopreview">视频预览</string>
</resources>