<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_marginTop="@dimen/cloudaccout_setting_mtop"
    android:scrollbars="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/cloudaccout_setting_marginleft"
            android:layout_marginRight="@dimen/cloudaccout_setting_marginright"
            android:layout_marginTop="@dimen/cloudaccout_setting_margintop"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/system_setting_cloudaccount_server"
                android:textColor="@color/md__defaultBackground" />

            <EditText
                android:id="@+id/domain_edt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:inputType="text"
                android:text="@string/system_setting_alarm_manager_domain_value" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/cloudaccout_setting_marginleft"
            android:layout_marginRight="@dimen/cloudaccout_setting_marginright"
            android:layout_marginTop="@dimen/cloudaccout_setting_margintop"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/system_setting_cloudaccount_port"
                android:textColor="@color/md__defaultBackground" />

            <EditText
                android:id="@+id/port_edt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:inputType="text"
                android:text="8080" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/cloudaccout_setting_marginleft"
            android:layout_marginRight="@dimen/cloudaccout_setting_marginright"
            android:layout_marginTop="@dimen/cloudaccout_setting_margintop"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/system_setting_cloudaccount_username"
                android:textColor="@color/md__defaultBackground" />

            <EditText
                android:id="@+id/user_edt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/cloudaccout_setting_marginleft"
            android:layout_marginRight="@dimen/cloudaccout_setting_marginright"
            android:layout_marginTop="@dimen/cloudaccout_setting_margintop"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/system_setting_cloudaccount_password"
                android:textColor="@color/md__defaultBackground" />

            <EditText
                android:id="@+id/password_edt"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:inputType="textPassword" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/cloudaccout_setting_marginleft"
            android:layout_marginRight="@dimen/cloudaccout_setting_marginright"
            android:layout_marginTop="@dimen/cloudaccout_setting_margintop"
            android:gravity="center"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/identify_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1.0"
                android:text="@string/system_setting_alarm_manager_identify" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>